# test

GH-test/: Dockerfile  pyproject.toml  requirements.txt
GH-test/.github/workflows/: deploy.yaml
GH-test/flow/: flow.py
intraday-test/: Dockerfile  intraday_flow.py
intraday-test/.github/: build.yaml
terraform-snowflake-demo/: databases.tf  main.tf  role_grants.tf
test/: flow.py  prefect.yaml  pyproject.toml
test/.prefect/: flows.json
