[tool.poetry]
name = "gh-test"
version = "0.1.0"
description = ""
authors = ["Bada-S <jamessopkin@gmail.com>"]
readme = "README.md"
packages = [{include = "gh_test"}]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
